# projectm7

./: alembic.ini  config.ini  main.py  my_select.py  pyproject.toml  seed.py
alembic/: env.py
db/: db.py  models.py  seed.py
