[tool.poetry]
name = "projectm7"
version = "0.1.0"
description = ""
authors = ["yerkovlad <61785699+yerkovlad@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.12.1"
sqlalchemy = "^2.0.23"
faker = "^19.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
